# ero2

./: ANALYSE_COMPLETE.md  PROJET_COMPLETE.md  QUICKSTART.md  README.md  SUMMARY.md  main.py  pyproject.toml  requirements.txt  verify_project.sh
results/: summary.txt
src/: __init__.py
src/analysis/: __init__.py  statistics.py
src/capacity/: __init__.py  limited_queue.py
src/core/: __init__.py  simulation_engine.py
src/regulation/: __init__.py  gating.py  heterogeneous_queues.py  population.py  priority_queue.py  scenario.py  server.py
src/reliability/: __init__.py  backup_strategies.py
tests/: run_all_tests.py  test_capacity.py  test_core.py  test_regulation.py  test_reliability.py
