[project]
name = "ero2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "pandas>=2.1.0",
    "python-dateutil>=2.8.0",
    "scipy>=1.11.0",
    "seaborn>=0.12.0",
    "simpy>=4.1.1",
]
